# service

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml
.github/workflows/: container-build.yaml
migrations/: 20230226182824_initial.sql
src/: main.rs
src/cli/: actions.rs  mod.rs
src/config/: contract.rs  database.rs  logger.rs  mod.rs  service.rs  signer.rs  tokens.rs
src/database/: migrations.rs  mod.rs  participants.rs  queues.rs  rooms.rs  utils.rs
src/service/: auth.rs  mod.rs  room.rs
src/waiter/: mod.rs  queue.rs
