[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
config            = { version = "0.13.3" }
tokio             = { version = "1.25.0",  features = ["full"] }
serde             = { version = "1.0.152", features = ["derive"] }
eyre              = { version = "0.6.8" }
url               = { version = "2.3.1" }
log               = { version = "0.4.17", features = ["std", "serde"] }
clap              = { version = "4.1.6",  features = ["derive"] }
async-trait       = { version = "0.1.64" }
tokio-stream      = { version = "0.1.12" }
tonic             = { version = "0.8.3" }
open-fastrlp      = { version = "0.1.4" }
thiserror         = { version = "1.0.38" }
jsonwebtoken      = { version = "8.2.0" }
uuid              = { version = "1.3.0",   features = ["v4", "fast-rng", "serde"] }
serde_json        = { version = "1.0",     features = ["raw_value"] }
rsa               = { version = "0.8.1" }
simplelog         = { version = "0.12.0", features = ["termcolor"] }
ethers-middleware = { version = "2" }
ethers-signers    = { version = "2" }
ethers-core       = { version = "2" }
ethers-providers  = { version = "2" }

[dependencies.coin-shuffle-protos]
git              = "ssh://git@github.com/coin-shuffle/protos.git"
branch           = "develop"
default-features = false
features         = ["server", "transport"]

[dependencies.coin-shuffle-contracts-bindings]
git    = "ssh://git@github.com/coin-shuffle/contracts-bindings.git"
branch = "develop"

[dependencies.coin-shuffle-core]
git              = "ssh://git@github.com/coin-shuffle/core.git"
branch           = "refactoring"
default-features = false
features         = ["service", "serde"]
